--- a/src/styles/Slide.css
+++ b/src/styles/Slide.css
@@ -1,4 +1,5 @@
 
 .slide .image-wrapper img {
   width: 100%;
+  height: 100%;
 }
